@@ -50,6 +50,7 @@ import java.util.Set;
  * limitations under the License.
  */
 
+
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
@@ -981,6 +982,16 @@ public class HttpSolrCall {
         
         response.append("], Path: [").append(resource).append("]");
         return response.toString();
+      }
+
+      @Override
+      public String getRemoteAddr() {
+        return getReq().getRemoteAddr();
+      }
+
+      @Override
+      public String getRemoteHost() {
+        return getReq().getRemoteHost();
       }
     };
 
